<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CricketCalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="continue_prev_game">Continue previous game</string>
    <string name="continue_game">Continue game</string>
    <string name="new_game">New Game</string>
    <string name="str_game_name">Game name</string>
    <string name="str_side1_batsfirst">Side 1 (bats first)</string>
    <string name="str_side1">Side 1</string>
    <string name="str_side2">Side 2</string>
    <string name="str_start">Start</string>
    <string name="str_game_prefix">Game</string>
    <string name="str_name">Name</string>
    <string name="str_score">Score</string>
    <string name="str_overs">Overs</string>
    <string name="str_wickets">Wickets</string>
    <string name="str_savedgames">Saved games</string>
    <string name="str_result_sideWon">Won by %s</string>
    <string name="str_result_inprogress">In progress</string>
    <string name="str_result_draw">Draw</string>
    <string name="str_target">Target:</string>
    <string name="str_enter_game_details">Enter game details</string>
    <string name="str_edit_game">Edit game</string>
    <string name="game_summary">Game summary</string>
    <string name="str_feedback_title">Please review app</string>
    <string name="str_feedback_message">Could you please help us by reviewing and
    giving your valuable feedback on Playstore</string>
    <string name="str_review">Review</string>
    <string name="str_later">Later</string>
    <string name="str_never">Never</string>


    <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <string name="banner_ad_unit_id">ca-app-pub-8413693216965428/2542049942</string>

    <string-array name="balls_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="menu_save">SAVE</string>
    <string name="menu_cancel">CANCEL</string>
    <string name="str_edit">Edit</string>
    <string name="str_share">Share</string>
    <string name="str_delete">Delete</string>
    <string name="str_are_you_sure">Are you sure?</string>
    <string name="delete_conf">Do you want to delete the match %s?</string>
    <string name="menu_batting">Side %d batting</string>
    <string name="menu_declare_win">Declare side %d win</string>
    <string name="menu_declare_draw">Declare draw</string>
    <string name="title_activity_scoreboard_display">ScoreboardDisplayActivity</string>
    <string name="state">State</string>

</resources>
